src/test/run-pass/import-from.rs
import spam::{ham, eggs};

module spam {
    fn ham() { }
    fn eggs() { }
}

fn main() { ham(); eggs(); }
